syntax = "proto3";

package admin;

option java_package = "ru.yandex.ci.api.admin";

service GraphDiscoveryAdminService {
    rpc ScheduleGraphDiscovery (ScheduleGraphDiscoveryRequest) returns (ScheduleGraphDiscoveryResponse);
}

message ScheduleGraphDiscoveryRequest {
    string branch = 1;
    string right_hash = 2;
}

message ScheduleGraphDiscoveryResponse {
}
